# common-cpp-math

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake_install/: cpp-math-config.cmake.in
include/cpp-math/: cpp_math.h
src/cpp-math/: cpp_math.cc
tests/: CMakeLists.txt
tests/src/: test-rotations.cc
